# Q-Flap

./: .gitignore  README.md  justfile  pyproject.toml
configs/: dqn.yaml  dqn_v2.yaml
docs/: DQN_V2.md  difficulty.md
models/: dqn_final.pth  dqn_v2.pth  reward_test.pth
scripts/: evaluate.py  train.py  train_qlearn.py
src/flappy_rl/: cli.py  config.py  evaluation.py  training.py
src/flappy_rl/agents/: base.py  dqn.py
src/flappy_rl/buffers/: nstep.py  prioritized.py  replay.py  sumtree.py
src/flappy_rl/envs/: flappy.py  vec_env.py  wrappers.py
src/flappy_rl/models/: networks.py
src/flappy_rl/utils/: checkpoint.py  logging.py  seeding.py
tests/: test_dqn_smoke.py  test_v2.py
